# 3d-placer

./: Makefile  README.md  cadb1053.pl  cadb1053_beta  run.sh  run_Lo.sh
draw/: case1.html  toycase2.html
ntuplace_MRT/: CMakeLists.txt  README.md
ntuplace_MRT/Cluster/: cluster.cpp  cluster.h  fccluster.cpp  fccluster.h
ntuplace_MRT/DetailPlace/: CMakeLists.txt  CellSlidingForCongestion.cpp  CellSlidingForCongestion.h  CongMatching.cpp  CongMatching.h  DPlace.cpp  DPlace.h  bbcellswap.cpp  bbcellswap.h  bbsolve.cpp  bbsolve.h  cellmoving.cpp  cellmoving.h  detail.cpp  detail.h
ntuplace_MRT/GlobalRouting/: CMakeLists.txt  GlobalRouting.cpp  GlobalRouting.h  MinimumSpanningTree.cpp  MinimumSpanningTree.h  bookshelf_IO.c  flute.c  flute.h  steiner.cpp  steiner.h
ntuplace_MRT/Legalizer/: LpLegal.h  TetrisLegal.cpp  TetrisLegal.h  boost_maxflow.cpp  legal.h  macrolegal.h
ntuplace_MRT/LibDB/: CMakeLists.txt  libdb.cpp  libdb.h
ntuplace_MRT/MPTree/: CMakeLists.txt  CornerTree.cpp  CornerTree.h  CornerTreeH.cpp  CornerTreeLoad.cpp  CornerTreePartition.cpp  btree.cpp  btree.h  fplan.cpp  fplan.h  libmptree.h  mptreeutil.h  sa.cpp  sa.h  util.cpp
ntuplace_MRT/MacroPlace/: CMakeLists.txt  macrocluster.cpp  macrocluster.h  macrosp.cpp  macrosp.h
ntuplace_MRT/NLPlace/: MyNLP.cpp  MyNLP.h  MyQP.cpp  WhiteSpaceAllocation.h  mlnlp.cpp  mlnlp.h  smooth.cpp  smooth.h
ntuplace_MRT/Parser/: CMakeLists.txt  ParserBookshelf.h  ParserIBMMix.cpp  ParserIBMMix.h  defrw.cpp  lefdef.cpp  lefdef.h  lefrw.cpp
ntuplace_MRT/PlaceCommon/: BlockMatching.cpp  BlockMatching.h  CongMap.cpp  CongMap.h  GRouteMap.cpp  ParamPlacement.h  lap_wrapper.h  placebin.cpp  placebin.h  placeutil.cpp  placeutil.h  randomplace.cpp  randomplace.h  util.h
ntuplace_MRT/PlaceDB/: CMakeLists.txt  SteinerDecomposition.cpp  placedb.cpp  placedb.h  placedb_bookshelf.cpp
ntuplace_MRT/QPPlacer/: CMakeLists.txt  PlaceDBQP.cpp  PlaceDBQP.h  qpforce.cpp  qpforce.h  solverQP.cpp  solverQP.h
ntuplace_MRT/Timing/: CMakeLists.txt  CriticalPath.cpp  CriticalPath.h  heap.cpp  heap.h  liberty.cpp  liberty.h  netlist.cpp  netlist.h  sta.cpp  sta.h  timing.cpp  timing.h
ntuplace_MRT/XSTree/: CMakeLists.txt  XSteiner.cpp  XSteiner.h  datastructure.h  dc.cpp  dc.h  decl.h  defs.h  edge.cpp  edge.h  error.cpp  extern.h  memory.cpp  sort.cpp
ntuplace_MRT/lib/: CMakeLists.txt
ntuplace_MRT/lib/cgrip/: CGRIP.h
ntuplace_MRT/lib/def/: CMakeLists.txt  DFEF_malloc.cpp  DFEF_malloc.h  DFEF_stringhash.cpp  DFEF_stringhash.h  DFEF_util.h  FEF_malloc.cpp  FEF_stringhash.cpp  FEF_stringhash.h  FEF_util.h  def.tab.cpp  def.tab.h  def.y  def_keywords.cpp  defiAlias.cpp  defiAlias.hpp  defiAssertion.cpp  defiAssertion.hpp  defiBlockage.cpp  defiBlockage.hpp  defiComponent.cpp  defiComponent.hpp  defiDebug.cpp  defiDebug.hpp  defiDefs.hpp  defiFPC.cpp  defiFPC.hpp  defiFill.cpp  defiFill.hpp  defiGroup.cpp  defiGroup.hpp  defiIOTiming.cpp  defiIOTiming.hpp  defiKRDefs.hpp  defiMisc.cpp  defiMisc.hpp  defiNet.cpp  defiNet.hpp  defiNonDefault.cpp  defiNonDefault.hpp  (+38 more)
ntuplace_MRT/lib/laspack/: CMakeLists.txt
ntuplace_MRT/lib/lef/: CMakeLists.txt  lef.tab.cpp  lef.tab.h  lef_keywords.cpp  lefiLayer.cpp  lex.cpph
ntuplace_MRT/lib/liberty/: CMakeLists.txt  PI.c  attr_enum.h  attr_lookup  attr_lookup.c  group_enum.h  group_lookup  group_lookup.c  liberty_parser.c  liberty_parser.h  liberty_parser.y  liberty_structs.h  libhash.c  libhash.h  mymalloc.c  mymalloc.h  si2dr_liberty.h  syntax.h  syntax_checks.c  syntax_decls.c  syntax_decls.h  token.c  token.l
ntuplace_MRT/lib/metis/: CMakeLists.txt  libmetis.h  util.c
ntuplace_MRT/ntuplace/: CMakeLists.txt  main.cpp
output/: case2_output.txt
run_tmp/case2/: ball.gp.pl  ball.gp.plt  ball.lg.pl  ball.lg.plt  ball.ntup.pl  ball.ntup.plt  die0.lg.pl  die0.lg.plt  die0.ntup.pl  die0.ntup.plt  die1.lg.pl  die1.lg.plt  die1.ntup.pl  die1.ntup.plt
run_tmp/case2/ball/: ball.aux  ball.nets  ball.nodes  ball.pl  ball.scl
run_tmp/case2/die0/: die0.nets  die0.nodes  die0.pl  die0.scl  die0.wts
run_tmp/case2/die1/: die1.nets  die1.nodes  die1.pl  die1.scl  die1.wts
shrunked-2d-place/case1/: shrunked-2d-place.gp.pl  shrunked-2d-place.gp.plt  shrunked-2d-place.lg.pl  shrunked-2d-place.lg.plt  shrunked-2d-place.ntup.pl  shrunked-2d-place.ntup.plt
shrunked-2d-place/case2/: shrunked-2d-place.gp.pl  shrunked-2d-place.gp.plt  shrunked-2d-place.lg.pl  shrunked-2d-place.lg.plt  shrunked-2d-place.ntup.pl  shrunked-2d-place.ntup.plt
shrunked-2d-place/case3/: shrunked-2d-place.gp.pl  shrunked-2d-place.lg.pl  shrunked-2d-place.ntup.pl
shrunked-2d-place/toycase2/: ball.gp.pl  ball.gp.plt  ball.lg.pl  ball.lg.plt  ball.ntup.pl  ball.ntup.plt  circuit.hgr  die0.lg.pl  die0.lg.plt  die0.ntup.pl  die0.ntup.plt  die1.lg.pl  die1.lg.plt  die1.ntup.pl  die1.ntup.plt
shrunked-2d-place/toycase2/ball/: ball.nets  ball.nodes  ball.pl  ball.scl  ball.wts
src/dataModel/: bin.cpp  bin.h  dm.cpp  dm.h  module.cpp  module.h
src/main/: main.cpp
src/parser/: parser.cpp  parser.h
src/partitioner/: cell.h  main.cpp  net.h  partitioner.cpp  partitioner.h
src/placer/: D2Dplacer.h  ntuplace3  ntuplace4  placer.cpp  placer.h
src/placer/ntuplace/Legalizer/: CMakeLists.txt  DiamondSearch.h  Prelegalizer.cpp  Prelegalizer.h  SingleRowPlacement.cpp  SingleRowPlacement.h  SpareCellInsertion.cpp  SpareCellInsertion.h  TetrisLegal.cpp  TetrisLegal.h
src/placer/ntuplace/PlaceCommon/: CMakeLists.txt  CongMap.h  ParamPlacement.cpp  ParamPlacement.h  arghandler.cpp  arghandler.h  placebin.cpp  placebin.h  placeutil.cpp  placeutil.h
src/placer/ntuplace3d_bak/NLPlace/: CMakeLists.txt  FixedPointMethod.cpp  MyNLP.cpp  mlnlp.cpp  mlqp.h
src/placer/ntuplace3d_bak/lib/lpsolve55/: CMakeLists.txt
src/utility/: aux.cpp  aux.h  drawHtml.cpp  drawHtml.h  drawHtml_head.txt  drawHtml_tail.txt  hgr.cpp  hgr.h  message.h  paramHdl.cpp  paramHdl.h
test-gnn/: case1-gnn.csv  case2-gnn.csv  case2_0820_128_output.csv  case3-gnn.csv
testcase/: case1.txt  case2.txt  case3.txt  toycase.txt  toycase2.txt
(+105 files in other folders)
