CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (ntuplace-r)
SET(CMAKE_C_FLAGS "-O2 -Wall -fomit-frame-pointer -funroll-loops -ffast-math -funit-at-a-time -fPIC")
SET(CMAKE_CXX_FLAGS "-O2 -Wall -fomit-frame-pointer -funroll-loops -ffast-math -funit-at-a-time -fPIC -DNDEBUG")
SET(CMAKE_EXE_LINKER_FLAGS "-static")
ADD_SUBDIRECTORY (lib)
ADD_SUBDIRECTORY (ntuplace)
ADD_SUBDIRECTORY (Cluster)
ADD_SUBDIRECTORY (DetailPlace)
ADD_SUBDIRECTORY (GlobalRouting)
ADD_SUBDIRECTORY (Legalizer)
ADD_SUBDIRECTORY (LibDB)
ADD_SUBDIRECTORY (MacroPlace)
ADD_SUBDIRECTORY (MPTree)
ADD_SUBDIRECTORY (NLPlace)
ADD_SUBDIRECTORY (Parser)
ADD_SUBDIRECTORY (PlaceCommon)
ADD_SUBDIRECTORY (PlaceDB)
ADD_SUBDIRECTORY (QPPlacer)
ADD_SUBDIRECTORY (Timing)
ADD_SUBDIRECTORY (XSTree)
