ADD_LIBRARY (laspack 
eigenval.c  factor.c    matrix.c  operats.c  qmatrix.c  vector.c
errhandl.c  itersolv.c  mlsolv.c  precond.c  rtc.c
)
########################################################
# This library is obtained from laspack-1.12.3
########################################################
